--- a/css/main.css
+++ b/css/main.css
@@ -1,23 +1,49 @@
+body,
+body * {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    vertical-align: top;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
 body{
     background-color: #8ecadf;
-
 }
-main{
+.container {
     display: inline-block;
     width: 800px;
     margin-left: calc((100% - 800px) / 2);
     margin-right: calc((100% - 800px) / 2);
     margin-top: 100px;
 }
-div:first-of-type {
+.left-column {
     display: inline-block;
     float: left;
     width: 40%;
     background-color: #0051a9;
+    padding: 40px;
 }
-div:last-of-type {
+.main-title{
+    color: white;
+    line-height: 30px;
+    font-size: 30px;
+    margin-bottom: 100px;
+}
+.bottom-links {
+
+}
+.link {
+
+}
+.right-column {
     display: inline-block;
+    padding: 40px;
     float: left;
     width: 60%;
     background-color: #fff;
+}
+
+symbol {
+    color:white;
 }
