--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,6 @@ body * {
     vertical-align: top;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
-
 body{
     background-color: #8ecadf;
 }
@@ -29,21 +28,44 @@ body{
     line-height: 30px;
     font-size: 30px;
     margin-bottom: 100px;
+    display: inline-block;
+    width: 100%;
 }
 .bottom-links {
-
+    display: inline-block;
 }
 .link {
-
+    color: white;
+    display: inline-block;
 }
 .right-column {
     display: inline-block;
-    padding: 40px;
+    padding: 60px;
     float: left;
     width: 60%;
     background-color: #fff;
 }
 
+.form {
+    display: inline-block;
+    width: 100%;
+}
 symbol {
     color:white;
+    display: inline-block;
+}
+.form > .form-row {
+    display: inline-block;
+    width: 100%;
+    margin-bottom: 30px;
+}
+
+.form > .form-row > label {
+    display: inline-block;
+    width: 100%;
+}
+
+.form > .form-row > input {
+    display: inline-block;
+    width: 100%;
 }
