--- a/css/main.css
+++ b/css/main.css
@@ -43,7 +43,22 @@ body{
     float: left;
     width: 60%;
     background-color: #fff;
+    position: relative;
 }
+.close {
+    display: inline-block;
+    width: 60px;
+    height: 60px;
+    text-align: center;
+    line-height: 54px;
+    font-size: 30px;
+    float: right;
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
+
 
 .form {
     display: inline-block;
