--- a/css/main.css
+++ b/css/main.css
@@ -16,37 +16,38 @@ body{
     margin-right: calc((100% - 800px) / 2);
     margin-top: 100px;
     position: relative;
-
 }
 .left-column {
     display: inline-block;
     width: 40%;
-    background-color: #0051a9;
     padding: 40px;
     position: absolute;
-    top: 0px;
+    background-color: blue;
+    top: 30px;
     left: 0;
-    text-align: center;
+    bottom: 30px;
+    background: url(../img/hill.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: bottom center;
     height: 484px;
-    margin-top: 27px;
-    
+
 }
 
 .main-title{
     color: white;
     font-size: 30px;
-    margin-bottom: 100px;
     display: inline-block;
     width: 100%;
+    line-height: 30px;
+
 }
 .bottom-links {
     display: inline-block;
+    position: absolute;
     bottom: 20px;
     right: 30px;
-    top: 30px;
-    left: 0;
-    margin-top: 250px;
-    
+    left: 20px;    
 }
 .link {
     color: white;
@@ -67,14 +68,10 @@ body{
     text-align: center;
     line-height: 54px;
     font-size: 30px;
-    float: right;
     position: absolute;
     top: 0;
     right: 0;
 }
-
-
-
 .form {
     display: inline-block;
     width: 100%;
@@ -88,7 +85,6 @@ symbol {
     width: 100%;
     margin-bottom: 30px;
 }
-
 .form > .form-row > label {
     display: inline-block;
     width: 100%;
@@ -96,9 +92,7 @@ symbol {
     text-transform: uppercase;
     font-size: 14px;
     line-height: 20px;
-
 }
-
 .form > .form-row > input {
     display: inline-block;
     width: 100%;
@@ -107,7 +101,6 @@ symbol {
     border: none;
     border-bottom: solid 2px lightgrey;
 }
-
 .form > .form-row > button {
     float: left;
     background-color: #015CDA;
@@ -120,7 +113,6 @@ symbol {
     border-radius: 20px;
     cursor: pointer;
 }
-
 .form > .form-row > span {
     float: left;
     padding: 10px;
@@ -128,7 +120,6 @@ symbol {
     font-size: 18px;
     margin-left: 10px;;
 }
-
 .form > .form-row > a {
     float: left;
     line-height: 20px;
