--- a/css/main.css
+++ b/css/main.css
@@ -1,130 +1,162 @@
 body,
 body * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    vertical-align: top;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  margin: 0;
+  padding: 0;
+  vertical-align: top;
+  box-sizing: border-box;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
-body{
-    background-color: #8ecadf;
+
+body {
+  height: 100vh;
+  background-color: #8ecadf;
+  position: relative;
 }
+
+.background {
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+  background-image: url(../img/hill.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: bottom center;
+  filter: blur(24px);
+}
+
 .container {
-    display: inline-block;
-    width: 800px;
-    margin-left: calc((100% - 800px) / 2);
-    margin-right: calc((100% - 800px) / 2);
-    margin-top: 100px;
-    position: relative;
+  display: inline-block;
+  width: 800px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
+
 .left-column {
-    display: inline-block;
-    width: 40%;
-    padding: 40px;
-    position: absolute;
-    background-color: blue;
-    top: 30px;
-    left: 0;
-    bottom: 30px;
-    background: url(../img/hill.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: bottom center;
-    height: 484px;
-
+  display: inline-block;
+  width: 40%;
+  padding: 40px;
+  background-color: #0051a9;
+  background-image: url(../img/hill.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: bottom center;
+  position: absolute;
+  top: 30px;
+  left: 0;
+  bottom: 30px;
 }
 
-.main-title{
-    color: white;
-    font-size: 30px;
-    display: inline-block;
-    width: 100%;
-    line-height: 30px;
-
+.main-title {
+  display: inline-block;
+  width: 100%;
+  color: #fff;
+  font-size: 30px;
+  line-height: 30px;
 }
+
 .bottom-links {
-    display: inline-block;
-    position: absolute;
-    bottom: 20px;
-    right: 30px;
-    left: 20px;    
+  display: inline-block;
+  position: absolute;
+  bottom: 20px;
+  left: 30px;
+  right: 30px;
 }
+
 .link {
-    color: white;
-    display: inline-block;
+  display: inline-block;
+  color: #fff;
 }
+
+.symbol {
+  display: inline-block;
+  color: #fff;
+}
+
 .right-column {
-    padding: 60px;
-    width: 60%;
-    background-color: #fff;
-    position: absolute;
-    top: 0;
-    right: 0;
+  width: 60%;
+  padding: 60px;
+  float: right;
+  background-color: #fff;
+  position: relative;
 }
+
 .close {
-    display: inline-block;
-    width: 60px;
-    height: 60px;
-    text-align: center;
-    line-height: 54px;
-    font-size: 30px;
-    position: absolute;
-    top: 0;
-    right: 0;
+  display: inline-block;
+  width: 60px;
+  height: 60px;
+  text-align: center;
+  font-size: 30px;
+  line-height: 60px;
+  position: absolute;
+  top: 0;
+  right: 0;
 }
+
 .form {
-    display: inline-block;
-    width: 100%;
+  display: inline-block;
+  width: 100%;
 }
-symbol {
-    color:white;
-    display: inline-block;
-}
+
 .form > .form-row {
-    display: inline-block;
-    width: 100%;
-    margin-bottom: 30px;
+  display: inline-block;
+  width: 100%;
+  margin-bottom: 30px;
 }
+.form > .form-row:last-of-type {
+  margin-bottom: 0;
+}
+
 .form > .form-row > label {
-    display: inline-block;
-    width: 100%;
-    color: #777;
-    text-transform: uppercase;
-    font-size: 14px;
-    line-height: 20px;
+  display: inline-block;
+  width: 100%;
+  font-size: 14px;
+  line-height: 20px;
+  color: #777;
+  text-transform: uppercase;
 }
 .form > .form-row > input {
-    display: inline-block;
-    width: 100%;
-    line-height: 35px;
-    font-size: 18px;
-    border: none;
-    border-bottom: solid 2px lightgrey;
+  display: inline-block;
+  width: 100%;
+  line-height: 35px;
+  font-size: 18px;
+  border: none;
+  border-bottom: 2px solid #ccc;
+}
+.form > .form-row > input:focus {
+  background-color: yellow;
+  outline: 2px dashed red;
 }
 .form > .form-row > button {
-    float: left;
-    background-color: #015CDA;
-    color: #fff;
-    border: none;
-    font-size: 18px;
-    line-height: 15px;
-    font-weight: bold;
-    padding: 10px 40px;
-    border-radius: 20px;
-    cursor: pointer;
+  float: left;
+  padding: 10px;
+  padding-left: 40px;
+  padding-right: 40px;
+  font-size: 18px;
+  line-height: 20px;
+  font-weight: bold;
+  background-color: #015cda;
+  color: #fff;
+  border: none;
+  border-radius: 20px;
+  cursor: pointer;
 }
 .form > .form-row > span {
-    float: left;
-    padding: 10px;
-    line-height: 20px;
-    font-size: 18px;
-    margin-left: 10px;;
+  float: left;
+  padding: 10px;
+  margin-left: 10px;
+  font-size: 18px;
+  line-height: 20px;
 }
 .form > .form-row > a {
-    float: left;
-    line-height: 20px;
-    padding: 10px;
-    font-size: 18px;
-    color: #015CDA;
-    text-decoration: none;
+  float: left;
+  padding: 10px;
+  font-size: 18px;
+  line-height: 20px;
+  color: #015cda;
+  text-decoration: none;
+}
+.form > .form-row > a:hover {
+  text-decoration: underline;
 }
